syntax = "proto3";

option go_package = "backend/contracts";

message HelloRequest {
	string my_name = 1;
	int32 my_age = 2;
}

message HelloResponse {
	string response_text = 1;
	int32 server_unix_time_i = 2;
	string server_unix_time_str = 3;
}

service MyHelloService {
	rpc Hello(HelloRequest) returns (HelloResponse);
	rpc HelloStream(HelloRequest) returns (stream HelloResponse);
}
